--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "@angular/cli": "~19.0.0",
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
-    "@eslint/js": "^9.8.0",
     "@nx/angular": "20.3.2",
-    "@nx/eslint": "20.3.2",
-    "@nx/eslint-plugin": "20.3.2",
     "@nx/jest": "20.3.2",
     "@nx/js": "20.3.2",
     "@nx/web": "20.3.2",
@@ -37,10 +34,6 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.13.0",
-    "angular-eslint": "^19.0.2",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
@@ -49,7 +42,6 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.13.0"
+    "typescript": "~5.6.2"
   }
 }
