--- a/package.json
+++ b/package.json
@@ -26,19 +26,28 @@
     "@nx/angular": "20.3.2",
     "@nx/jest": "20.3.2",
     "@nx/js": "20.3.2",
+    "@nx/storybook": "20.3.2",
     "@nx/web": "20.3.2",
     "@nx/workspace": "20.3.2",
     "@schematics/angular": "~19.0.0",
+    "@storybook/addon-essentials": "^8.4.6",
+    "@storybook/angular": "^8.4.6",
+    "@storybook/core-server": "^8.4.6",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
+    "autoprefixer": "^10.4.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
+    "ng-packagr": "~19.0.0",
     "nx": "20.3.2",
+    "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "storybook": "^8.4.6",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
