--- a/libs/input/package.json
+++ b/libs/input/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@tuuing/input",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": "^19.0.0",
     "@angular/core": "^19.0.0"
