--- a/libs/button/package.json
+++ b/libs/button/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@tuuing/button",
-  "version": "0.0.1",
+  "version": "0.1.3",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": "^19.0.0",
     "@angular/core": "^19.0.0"
