--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,27 +10,15 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@tuuing/input": [
-        "libs/input/src/index.ts"
-      ],
-      "@tuuing/storybook-docs": [
-        "libs/storybook-docs/src/index.ts"
-      ],
-      "@tuuing/button": [
-        "libs/button/src/index.ts"
-      ]
+      "@tuuing/button": ["libs/button/src/index.ts"],
+      "@tuuing/input": ["libs/input/src/index.ts"],
+      "@tuuing/storybook-docs": ["libs/storybook-docs/src/index.ts"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
