chore: add projectsRelationship release config in nx.json file

--- a/nx.json
+++ b/nx.json
@@ -90,6 +90,7 @@
     }
   },
   "release": {
+    "projectsRelationship": "independent",
     "projects": [
       "libs/input",
       "libs/button"
